--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "purescript-random": "^2.0.0",
     "purescript-st": "^2.0.0",
     "purescript-datetime": "^2.0.0",
-    "purescript-now": "^2.0.0"
+    "purescript-now": "^2.0.0",
+    "purescript-aff": "^2.0.2"
   },
   "devDependencies": {
     "purescript-psci-support": "^2.0.0"
