--- a/bower.json
+++ b/bower.json
@@ -7,31 +7,27 @@
     "output"
   ],
   "dependencies": {
-    "purescript-console": "^2.0.0",
-    "purescript-foreign": "^3.0.1",
-    "purescript-lists": "^3.2.1",
-    "purescript-arrays": "^3.0.1",
-    "purescript-maps": "^2.0.1",
-    "purescript-eff": "^2.0.0",
-    "purescript-control": "^2.0.0",
-    "purescript-node-child-process": "^3.0.0",
-    "purescript-maybe": "^2.0.1",
-    "purescript-node-http": "^3.0.1",
-    "purescript-node-streams": "^2.0.0",
-    "purescript-foldable-traversable": "^2.0.0",
-    "purescript-prelude": "^2.1.0",
-    "purescript-node-buffer": "^2.0.0",
-    "purescript-partial": "^1.1.2",
-    "purescript-routing": "^3.0.0",
-    "purescript-node-process": "^3.0.0",
-    "purescript-random": "^2.0.0",
-    "purescript-st": "^2.0.0",
-    "purescript-datetime": "^2.0.0",
-    "purescript-now": "^2.0.0",
-    "purescript-aff": "^2.0.2",
-    "purescript-lens": "^2.0.0"
+    "purescript-prelude": "^3.0.0",
+    "purescript-console": "^3.0.0",
+    "purescript-maybe": "^3.0.0",
+    "purescript-eff": "^3.1.0",
+    "purescript-lists": "^4.0.1",
+    "purescript-arrays": "^4.0.1",
+    "purescript-node-child-process": "^4.0.0",
+    "purescript-aff": "^3.0.0",
+    "purescript-node-buffer": "^3.0.0",
+    "purescript-foldable-traversable": "^3.0.0",
+    "purescript-control": "^3.0.0",
+    "purescript-routing": "^5.0.0",
+    "purescript-st": "^3.0.0",
+    "purescript-node-http": "^4.0.0",
+    "purescript-node-streams": "^3.0.0",
+    "purescript-now": "^3.0.0",
+    "purescript-lens": "^3.0.0",
+    "purescript-foreign": "^4.0.0",
+    "purescript-node-process": "^4.0.0"
   },
   "devDependencies": {
-    "purescript-psci-support": "^2.0.0"
+    "purescript-psci-support": "^3.0.0"
   }
 }
