--- a/bower.json
+++ b/bower.json
@@ -1,35 +1,105 @@
 {
   "name": "emissary",
+  "description": "",
+  "main": "",
+  "authors": [
+    "Sean Toner"
+  ],
+  "license": "Apache 2.0",
+  "homepage": "https://github.com/rarebreed/emissary",
+  "private": true,
   "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
-    "output"
+    "test",
+    "tests"
   ],
+  "resolutions": {
+    "purescript-prelude": "^3.0.0",
+    "purescript-eff": "^3.1.0",
+    "purescript-arrays": "^4.1.0",
+    "purescript-foldable-traversable": "^3.0.0",
+    "purescript-bifunctors": "^3.0.0",
+    "purescript-control": "^3.3.0",
+    "purescript-newtype": "^2.0.0",
+    "purescript-maybe": "^3.0.0",
+    "purescript-monoid": "^3.0.0",
+    "purescript-invariant": "^3.0.0",
+    "purescript-nonempty": "^4.0.0",
+    "purescript-st": "^3.0.0",
+    "purescript-tailrec": "^3.0.0",
+    "purescript-identity": "^3.0.0",
+    "purescript-either": "^3.0.0",
+    "purescript-tuples": "^4.0.0",
+    "purescript-unfoldable": "^3.0.0",
+    "purescript-unsafe-coerce": "^3.0.0",
+    "purescript-distributive": "^3.0.0",
+    "purescript-console": "^3.0.0",
+    "purescript-exceptions": "^3.0.0",
+    "purescript-functions": "^3.0.0",
+    "purescript-transformers": "^3.0.0",
+    "purescript-lazy": "^3.0.0",
+    "purescript-datetime": "^3.0.0",
+    "purescript-enums": "^3.0.0",
+    "purescript-strings": "^3.0.0",
+    "purescript-generics": "^4.0.0",
+    "purescript-proxy": "^2.0.0",
+    "purescript-integers": "^3.0.0",
+    "purescript-foreign": "^4.0.0",
+    "purescript-js-date": "^4.0.0",
+    "purescript-nullable": "^3.0.0",
+    "purescript-globals": "^3.0.0",
+    "purescript-maps": "^3.0.0",
+    "purescript-node-buffer": "^3.0.0",
+    "purescript-node-fs": "^4.0.0",
+    "purescript-node-path": "^2.0.0",
+    "purescript-node-streams": "^3.1.0",
+    "purescript-posix-types": "^3.0.0",
+    "purescript-node-process": "^4.0.0",
+    "purescript-lists": "^4.0.0",
+    "purescript-node-child-process": "^4.0.0",
+    "purescript-aff": "^3.1.0",
+    "purescript-parallel": "^3.0.0",
+    "purescript-refs": "^3.0.0",
+    "purescript-functors": "^2.0.0",
+    "purescript-const": "^3.0.0",
+    "purescript-contravariant": "^3.0.0",
+    "purescript-dom": "^4.0.0",
+    "purescript-media-types": "^3.0.0",
+    "purescript-routing": "^5.1.0",
+    "purescript-semirings": "^4.0.0",
+    "purescript-validation": "^3.0.0",
+    "purescript-node-http": "^4.0.0",
+    "purescript-node-url": "^3.0.0",
+    "purescript-options": "^3.0.0",
+    "purescript-psci-support": "^3.0.0"
+  },
   "dependencies": {
     "purescript-prelude": "^3.0.0",
-    "purescript-console": "^3.0.0",
-    "purescript-maybe": "^3.0.0",
     "purescript-eff": "^3.1.0",
-    "purescript-lists": "^4.0.1",
-    "purescript-arrays": "^4.0.1",
-    "purescript-node-child-process": "^4.0.0",
-    "purescript-aff": "^3.0.0",
-    "purescript-node-buffer": "^3.0.0",
-    "purescript-foldable-traversable": "^3.0.0",
-    "purescript-control": "^3.0.0",
-    "purescript-routing": "^5.0.0",
-    "purescript-st": "^3.0.0",
-    "purescript-node-http": "^4.0.0",
-    "purescript-node-streams": "^3.0.0",
-    "purescript-now": "^3.0.0",
-    "purescript-lens": "^3.0.0",
-    "purescript-foreign": "^4.0.0",
+    "purescript-arrays": "^4.1.0",
+    "purescript-maybe": "^3.0.0",
     "purescript-node-process": "^4.0.0",
+    "purescript-node-buffer": "^3.0.0",
+    "purescript-node-child-process": "^4.0.0",
+    "purescript-aff": "^3.1.0",
+    "purescript-node-fs-aff": "^4.0.0",
     "purescript-node-path": "^2.0.0",
-    "purescript-node-fs-aff": "^4.0.0"
+    "purescript-control": "^3.3.0",
+    "purescript-routing": "^5.1.0",
+    "purescript-st": "^3.0.0",
+    "purescript-node-streams": "^3.1.0",
+    "purescript-foldable-traversable": "^3.3.0",
+    "purescript-foreign": "^4.0.0",
+    "purescript-now": "^3.0.0",
+    "purescript-console": "^3.0.0",
+    "purescript-node-http": "^4.0.0",
+    "purescript-lists": "^4.6.0",
+    "purescript-lens": "^3.0.0"
   },
   "devDependencies": {
-    "purescript-psci-support": "^3.0.0"
+    "purescript-psci-support": "^3.0.0",
+    "purescript-eff": "^3.1.0"
   }
 }
